--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<table cellspacing="20">
 <h1></h1>
 <td>
-	<img src ="IMAGE\daph.png" alt= width="250
+	<img src ="1.png" alt= width="250
 	" height="250">
 	<h1>Daphne Segubre Alisasis </h1>
 	<h2> Currently the secretary of<em><a href="https://www.facebook.com/Nigma.Kyong%22%3E"> Macoy Enterprises</a> </h2> </em>
